fixing styling on mobile

--- a/src/styles/_room.scss
+++ b/src/styles/_room.scss
@@ -1,3 +1,7 @@
+.roomPane-container {
+  height: 100%;
+}
+
 .roomPane {
   position: relative;
   width: 100%;
